--- a/index.2.html
+++ b/index.2.html
@@ -1,230 +1,247 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
-  <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Watch the latest anime, movies, and dramas dubbed in Hindi and more - only on DOOSH HUB!">
+  <meta name="keywords" content="anime, hindi anime, wind breaker, free streaming, dubbed anime">
+  <meta name="author" content="DOOSH HUB Team">
   <title>DOOSH HUB</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" sizes="32x32">
   <style>
-    /* Theme Variables */
-    :root { --bg:#0f0f0f; --fg:#fff; --accent:#39ff14; }
-    .theme-cyber    { --bg:#0a0a12; --accent:#ff0099; --fg:#e0e0e0 }
-    .theme-neon     { --bg:#080808; --accent:#00e5ff; --fg:#f0f0f0 }
-    .theme-holo     { --bg:#111;   --accent:#ff00ff; --fg:#ddd   }
-    .theme-glitch   { --bg:#050505;--accent:#ff5500; --fg:#ccc   }
-    .theme-vapor    { --bg:#120022;--accent:#ff77ff; --fg:#ffe  }
-    .theme-synth    { --bg:#0b0018;--accent:#ff4444; --fg:#ffd  }
-    .theme-matrix   { --bg:#001100;--accent:#00ff00; --fg:#99f  }
-    .theme-hologrid { --bg:#00111a;--accent:#11aaff; --fg:#bbd  }
-    .theme-chrome   { --bg:#111111;--accent:#aaccee; --fg:#dde  }
-    .theme-dmatrix  { --bg:#000;   --accent:#33ff33; --fg:#88f  }
+    :root {
+      --main-glow: #ff00ff;
+      --secondary-glow: #00ffe0;
+    }body {
+  background-color: #0d0d0d;
+  color: #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
-    body {
-      background: var(--bg); color: var(--fg);
-      margin:0; overflow-x:hidden; font-family:'Roboto',sans-serif;
-      transition: background .5s, color .5s;
-    }
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.75rem 1rem;
+  z-index: 1000;
+}
 
-    /* Loader */
-    #loader {
-      position:fixed; inset:0; background:var(--bg);
-      display:flex;flex-direction:column;align-items:center;justify-content:center;
-      z-index:9999;
-    }
-    #loader-text { color:var(--accent); font-size:2rem; margin-bottom:1rem; }
-    .loader-bar {
-      width:80%; max-width:400px; height:8px; background:var(--accent);
-      animation:scan 1.5s infinite;
-      border-radius:4px;
-    }
-    @keyframes scan {0%,100%{transform:scaleX(0)}50%{transform:scaleX(1)}}
+header img {
+  height: 48px;
+  border-radius: 50%;
+}
 
-    /* Header */
-    header {
-      position:fixed;top:0;left:0;width:100%;
-      background:rgba(0,0,0,0.7);display:flex;align-items:center;padding:0.5rem;gap:1rem;z-index:50;
-    }
-    #search {
-      flex:1;height:40px;padding:0 1rem;border:none;border-radius:20px;
-      background:rgba(255,255,255,0.1);color:var(--fg);outline:none;
-    }
-    #search::placeholder { color:var(--accent); }
-    #themeSelect {
-      background:var(--bg);color:var(--fg);
-      border:1px solid var(--accent);border-radius:6px;padding:.5rem;
-    }
+.search-bar {
+  flex-grow: 1;
+  margin-left: 1rem;
+}
 
-    /* Welcome */
-    .welcome { margin-top:4.5rem;text-align:center;font-size:2rem;font-weight:bold;padding:1rem 0; }
+.search-bar input {
+  width: 100%;
+  padding: 0.5rem;
+  background: #1f1f1f;
+  border: none;
+  border-radius: 0.5rem;
+  color: white;
+}
 
-    /* Carousel (landscape) */
-    .carousel-frame {
-      position:relative;margin-top:1rem;width:100%;height:300px;overflow:hidden;
-    }
-    #carousel {
-      display:flex;transition:transform .7s ease-in-out;
-    }
-    #carousel a {
-      flex:0 0 100%;height:300px;position:relative;
-    }
-    #carousel img {
-      position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
-      width:auto;height:100%;
-    }
-    .carousel-caption {
-      position:absolute;bottom:0;width:100%;background:rgba(0,0,0,0.6);
-      text-align:center;padding:.5rem;color:#fff;font-weight:bold;
-    }
+#loader {
+  position: fixed;
+  inset: 0;
+  background: black;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  z-index: 9999;
+}
 
-    /* Grid */
-    .anime-grid {
-      display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));
-      gap:1rem;padding:1rem;margin-bottom:4rem;
-    }
-    .anime-card {
-      position:relative;width:200px;height:280px;margin:auto;
-      box-shadow:0 4px 15px rgba(0,0,0,0.3);border-radius:8px;overflow:hidden;
-      transition:transform .3s;
-    }
-    .anime-card:hover { transform:scale(1.05); }
-    .anime-card img {
-      width:100%;height:220px;object-fit:cover;
-    }
-    .anime-card-title {
-      text-align:center;padding:.5rem;background:var(--bg);color:var(--fg);font-weight:bold;
-    }
+.carousel {
+  margin-top: 80px;
+  display: flex;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  -webkit-overflow-scrolling: touch;
+}
 
-    /* Buttons */
-    .circle-btn {
-      position:fixed;right:1rem;width:50px;height:50px;border-radius:50%;
-      background:var(--accent);color:#000;display:flex;align-items:center;justify-content:center;
-      font-size:1.25rem;cursor:pointer;transition:transform .2s,box-shadow .2s;z-index:50;
-    }
-    .circle-btn:hover { transform:scale(1.1);box-shadow:0 0 10px var(--accent); }
-    #support { top:6rem; }
-    #scroll { bottom:1rem; display:none; }
+.carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.carousel-item {
+  flex: none;
+  width: 100vw;
+  height: 220px;
+  scroll-snap-align: start;
+  position: relative;
+}
+
+.carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.carousel-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);
+  color: white;
+  text-align: center;
+  padding: 0.5rem;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
+  margin-top: 1rem;
+}
+
+.anime-card {
+  background: #1e1e1e;
+  border-radius: 0.75rem;
+  overflow: hidden;
+  transition: transform 0.2s;
+  position: relative;
+}
+
+.anime-card:hover {
+  transform: scale(1.03);
+  box-shadow: 0 0 10px var(--main-glow);
+}
+
+.anime-card img {
+  width: 100%;
+  height: 240px;
+  object-fit: cover;
+}
+
+.anime-title {
+  text-align: center;
+  padding: 0.5rem;
+  font-weight: bold;
+}
+
+#adPopup {
+  position: fixed;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.85);
+  display: none;
+  align-items: center;
+  justify-content: center;
+  z-index: 9998;
+}
+
+.ad-box {
+  background: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  text-align: center;
+  max-width: 300px;
+}
+
+.ad-box button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
 
   </style>
 </head>
-<body class="theme-cyber">
-
-  <!-- Loader -->
-  <div id="loader">
-    <div id="loader-text">DOOSH HUB</div>
-    <div class="loader-bar"></div>
-  </div>
-
-  <!-- Header -->
-  <header>
-    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Logo" class="w-10 h-10 rounded-full"/>
-    <input id="search" placeholder="Search anime…" oninput="filterAnime()"/>
-    <select id="themeSelect"></select>
-  </header>
-
-  <div class="welcome">Welcome to DOOSH HUB!</div>
-
-  <!-- Carousel -->
-  <div class="carousel-frame"><div id="carousel"></div></div>
-
-  <!-- Grid -->
-  <div class="anime-grid" id="animeList"></div>
-
-  <!-- Buttons -->
-  <div id="support" class="circle-btn" onclick="triggerPopunder()">💖</div>
-  <div id="scroll" class="circle-btn" onclick="scrollToTop()">↑</div>
-
-  <script>
-    // Data
+<body>
+  <div id="loader">Loading DOOSH HUB...</div>  <header>
+    <img src="Screenshot_2025-04-05-08-08-19-87.jpg" alt="Logo">
+    <div class="search-bar">
+      <input type="text" placeholder="Search animes, movies..." id="search" oninput="filterAnime()">
+    </div>
+  </header>  <div class="carousel" id="carousel"></div>
+  <main class="grid-container" id="animeList"></main>  <div id="adPopup">
+    <div class="ad-box relative">
+      <button onclick="closeAd()">&times;</button>
+      <h2 class="text-xl font-semibold mb-2">Support Us!</h2>
+      <p>Check out new releases only on DOOSH HUB</p>
+      <a href="https://dooshtoons.linkpc.net" class="mt-4 inline-block bg-purple-600 hover:bg-purple-800 text-white px-4 py-2 rounded-full">Visit Now</a>
+    </div>
+  </div>  <script>
     const animeData = {
-      "wind1":{title:"Wind Breaker S1",cover:"InShot_20250427_105208488.jpg",link:"#"}
-      // add more…
+      "wind-breaker season 1": {
+        title: "WIND BREAKER Season 1 in Hindi",
+        cover: "InShot_20250427_105208488.jpg",
+        link: "anime/windbreakerseason1.html"
+      },
+      "attack on titan": {
+        title: "Attack on Titan Hindi Dubbed",
+        cover: "aot_cover.jpg",
+        link: "anime/aot.html"
+      }
     };
-    // Themes
-    const themes=[{id:'cyber',name:'Cyberpunk'},{id:'neon',name:'Neon'},{id:'holo',name:'Holo'},
-      {id:'glitch',name:'Glitch'},{id:'vapor',name:'Vaporwave'},{id:'synth',name:'Synthwave'},
-      {id:'matrix',name:'Matrix'},{id:'hologrid',name:'Holo-Grid'},{id:'chrome',name:'Holo-Chrome'},
-      {id:'dmatrix',name:'Dark-Matrix'}];
-    const sel=document.getElementById('themeSelect');
-    themes.forEach(t=>sel.add(new Option(t.name,t.id)));
-    function applyTheme(id){
-      document.body.className='theme-'+id;
-      sel.value=id;
-      localStorage.setItem('theme',id);
-    }
-    applyTheme(localStorage.getItem('theme')||'cyber');
-    sel.onchange=()=>applyTheme(sel.value);
 
-    // Loader
-    let loaded=0,total=Object.keys(animeData).length*2;
-    function advance(){ if(++loaded>=total) {
-      document.getElementById('loader').style.display='none';
-      setInterval(autoSlide,3000);
-    }};
-
-    // Carousel
-    function loadCarousel(){
-      const c=document.getElementById('carousel');
-      Object.values(animeData).forEach(a=>{
-        let e=document.createElement('a');e.href=a.link;
-        let i=new Image();i.src=a.cover;i.onload=advance;e.append(i);
-        let cap=document.createElement('div');cap.className='carousel-caption';cap.innerText=a.title;e.append(cap);
-        c.append(e);
-      });
-      c.append(c.children[0].cloneNode(true));
-    }
-    let idx=0;
-    function autoSlide(){
-      const c=document.getElementById('carousel'),w=c.offsetWidth;
-      idx++;c.style.transform=`translateX(-${idx*w}px)`;
-      if(idx>=c.children.length-1){
-        setTimeout(()=>{c.style.transition='none';c.style.transform='translateX(0)';idx=0;
-          setTimeout(()=>c.style.transition='transform .7s ease-in-out',50);
-        },700);
-      }
-    }
-
-    // Grid
-    function loadGrid(){
-      const g=document.getElementById('animeList');
-      Object.values(animeData).forEach(a=>{
-        let e=document.createElement('a');e.href=a.link;e.className='anime-card';
-        let i=new Image();i.src=a.cover;i.onload=advance;e.append(i);
-        let t=document.createElement('div');t.className='anime-card-title';t.innerText=a.title;e.append(t);
-        g.append(e);
+    function buildCarousel() {
+      const carousel = document.getElementById('carousel');
+      carousel.innerHTML = '';
+      Object.values(animeData).forEach(a => {
+        const slide = document.createElement('div');
+        slide.className = 'carousel-item';
+        slide.innerHTML = `<img src="${a.cover}" alt="${a.title}"><div class="carousel-caption">${a.title}</div>`;
+        carousel.appendChild(slide);
       });
     }
 
-    // Search
-    function filterAnime(){
-      const q=document.getElementById('search').value.toLowerCase();
-      document.querySelectorAll('.anime-card').forEach(c=>{
-        c.style.display=c.querySelector('.anime-card-title').innerText.toLowerCase().includes(q)?'':'none';
+    function buildGrid() {
+      const grid = document.getElementById('animeList');
+      grid.innerHTML = '';
+      Object.values(animeData).forEach(a => {
+        const card = document.createElement('a');
+        card.href = a.link;
+        card.className = 'anime-card';
+        card.innerHTML = `<img src="${a.cover}" alt="${a.title}"><div class="anime-title">${a.title}</div>`;
+        grid.appendChild(card);
       });
     }
 
-    // Scroll
-    window.onscroll=()=>document.getElementById('scroll').style.display=window.scrollY>200?'flex':'none';
-    function scrollToTop(){window.scrollTo({top:0,behavior:'smooth'});}
+    function filterAnime() {
+      const q = document.getElementById('search').value.toLowerCase();
+      document.querySelectorAll('.anime-card').forEach(card => {
+        const title = card.querySelector('.anime-title').innerText.toLowerCase();
+        card.style.display = title.includes(q) ? '' : 'none';
+      });
+    }
 
-    // Popunder
-    let last=0,cool=300000,z=[9277886,9277883,9277875];
-    function triggerPopunder(){
-      const now=Date.now();if(now-last>cool){
-        let s=document.createElement('script'),nz=z[Math.floor(Math.random()*z.length)];
-        s.src='https://shebudriftaiter.net/tag.min.js';s.setAttribute('data-zone',nz);
-        document.body.appendChild(s);last=now;
+    function showAdIfNeeded() {
+      const lastShown = localStorage.getItem("lastAdShown");
+      const now = Date.now();
+      const twelveHours = 12 * 60 * 60 * 1000;
+      if (!lastShown || now - parseInt(lastShown) > twelveHours) {
+        document.getElementById("adPopup").style.display = "flex";
+        localStorage.setItem("lastAdShown", now);
       }
     }
-    ['click','touchstart'].forEach(evt=>{
-      if(!localStorage.getItem('adShown')){
-        document.body.addEventListener(evt,()=>{
-          triggerPopunder();localStorage.setItem('adShown','yes');
-        },{once:true});
-      }
-    });
-    setInterval(triggerPopunder,600000);
 
-    // Init
-    window.onload=()=>{loadCarousel();loadGrid();};
-  </script>
-</body>
+    function closeAd() {
+      document.getElementById("adPopup").style.display = "none";
+    }
+
+    window.onload = () => {
+      buildCarousel();
+      buildGrid();
+      showAdIfNeeded();
+      setTimeout(() => document.getElementById('loader').style.display = 'none', 2000);
+    };
+  </script></body>
 </html>
